# embedded-c-practice

./: .gitignore  README.md
FreeRTOS/002_RTOS_basics/: 001_FreeRTOS.ioc
FreeRTOS/003_LED_Tasks/: 003_LED_Tasks.ioc
FreeRTOS/003_freeRTOS_tasks/: 003_freeRTOS_tasks.ioc
FreeRTOS/004_freeRTOS_tasks_segger/: 004_freeRTOS_tasks_segger.ioc
FreeRTOS/006_freeRTOS_3Led_button_task/: 005_freeRTOS_3Led_tasks.ioc
FreeRTOS/007_freeRTOS_Queues/: 007_freeRTOS_Queues.ioc
FreeRTOS/records/: 001.SVdat
Host/.metadata/: .log4j2.xml  version.ini
Host/000TestProject/: .cproject  main.c
Host/001_StructInit/: .cproject  .project  main.c
Host/002_structPacket/: .cproject  .project  main.c
Host/003_union/: .cproject  .project  main.c
RTOS/.metadata/: .log4j2.xml  version.ini
RTOS/001_Tasks/: .cproject
RTOS/002_Tasks_with_SeggerView/: .cproject  .mxproject  .project  002_Tasks.launch
RTOS/003_LED_Tasks/: .cproject  .project
RTOS/004_Queue_n_timers/: .cproject  .mxproject  .project  004_Queue_n_timers.ioc
RTOS/Records/: 001.SVdat  002.SVdat  003.SVdat
Test_code/002_Tasks_with_SeggerView/: 001_Tasks.ioc
Test_code/002_tasks_FreeRTOS/: 002_tasks_FreeRTOS.ioc
arduino_projects/: README.md
arduino_projects/004_pir_motionsensor/: 004_pir_motionsensor.ino
arduino_projects/006_LDR/: 006_LDR.ino
arduino_projects/009_leds/: 009_leds.ino
arduino_sensors _integrations/001_ultrasonic_sensor/: 001_ultrasonic_sensor.ino
device_drivers/001_Clock/: 001_Clock.ioc
esp32_codes/: README.md
esp32_codes/031_Smart_Multi_Sensor_Hub/main/: CMakeLists.txt  main.c
(+576 files in other folders)
